Migrate to JSpecify