@@ -4,37 +4,36 @@ import ch.njol.skript.log.LogEntry;
 import ch.njol.skript.log.LogHandler;
 import ch.njol.skript.log.SkriptLogger;
 import me.glicz.skanalyzer.result.ScriptError;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Unmodifiable;
 
 import java.io.File;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class CachingLogHandler extends LogHandler {
     private final Map<File, List<ScriptError>> scriptErrors = new HashMap<>();
 
-    public @Unmodifiable List<ScriptError> scriptErrors(File file) {
-        if (scriptErrors.containsKey(file)) {
-            return List.copyOf(scriptErrors.get(file));
-        }
-        return List.of();
+    public List<ScriptError> scriptErrors(File file) {
+        return scriptErrors.containsKey(file) ? List.copyOf(scriptErrors.get(file)) : Collections.emptyList();
     }
 
     @Override
-    public @NotNull LogResult log(@NotNull LogEntry entry) {
-        if (entry.node != null) {
-            this.scriptErrors.computeIfAbsent(entry.node.getConfig().getFile(), file -> new ArrayList<>())
-                    .add(new ScriptError(entry.node.getLine(), entry.message, entry.level));
+    public LogResult log(LogEntry entry) {
+        if (entry.node == null) {
+            return LogResult.CACHED;
         }
+
+        File script = entry.node.getConfig().getFile();
+        if (script == null) {
+            return LogResult.CACHED;
+        }
+
+        scriptErrors.computeIfAbsent(script, $ -> new ArrayList<>())
+                .add(new ScriptError(entry.node.getLine(), entry.message, entry.level));
 
         return LogResult.CACHED;
     }
 
     @Override
-    public @NotNull CachingLogHandler start() {
+    public CachingLogHandler start() {
         return SkriptLogger.startLogHandler(this);
     }
 }
